# demiurge

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLATFORM_OVERVIEW.md  README.md  SETUP.md  WALLET_AUTH_IMPLEMENTATION.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/demiurge-studio/: CMakeLists.txt
apps/desktop/demiurge-studio/qml/: main.qml
apps/desktop/demiurge-studio/src/: main.cpp  rpcclient.cpp  rpcclient.h
apps/portal-web/: package.json
backend/: .env.example  package.json
backend/scripts/: closeSeason.js  generateMockData.js  seedMoves.js
backend/src/: server.js
backend/src/abi/: DemiurgeCosmetics.json  DemiurgeSeasonPass.json  DemiurgeTitles.json
backend/src/config/: contracts.js  database.js  ladderConfig.js  mongodb.js  rewardsConfig.js  socket.js  storageConfig.js  web3.js
backend/src/controllers/: authController.js  battleController.js  chatController.js  heroController.js  ladderController.js  marketplaceController.js  nftController.js  partyController.js  (+3 more)
blockchain/: .env.example  .gitignore  README_REWARDS.md  hardhat.config.js  package.json
blockchain/contracts/: DemiurgeCosmetics.sol  DemiurgeNFT.sol  DemiurgeSeasonPass.sol  DemiurgeTitles.sol  NFTMarketplace.sol  NFTWars.sol
blockchain/scripts/: deploy.js  deployRewards.js
blockchain/test/: DemiurgeNFT.test.js
chain/src/: config.rs  main.rs  node.rs  rpc.rs
docs/: README.md  architecture.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
indexer/abyss-gateway/: package.json
(+64 files in other folders)
